--- a/src/components/NoteDialogComponents/NoteDialogNoteWrapper.scss
+++ b/src/components/NoteDialogComponents/NoteDialogNoteWrapper.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
 
-  border-radius: $note__border-radius;
+  //border-radius: $note__border-radius;
 
   overflow: hidden;
   @include scrollbar();
